logs/spanishacquisition.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpanishAcquisition-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spacq'...
Listing './lib/python3.5/site-packages/spacq/devices'...
Listing './lib/python3.5/site-packages/spacq/devices/agilent'...
Listing './lib/python3.5/site-packages/spacq/devices/agilent/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/agilent/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/agilent/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/agilent/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc/gui'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/iqc/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/oxford'...
Listing './lib/python3.5/site-packages/spacq/devices/oxford/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/oxford/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/oxford/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/oxford/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/rohde_schwarz'...
Listing './lib/python3.5/site-packages/spacq/devices/rohde_schwarz/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/rohde_schwarz/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/rohde_schwarz/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/rohde_schwarz/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/sample'...
Listing './lib/python3.5/site-packages/spacq/devices/sample/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/sample/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/sample/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/sample/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/tektronix'...
Listing './lib/python3.5/site-packages/spacq/devices/tektronix/mock'...
Listing './lib/python3.5/site-packages/spacq/devices/tektronix/mock/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/tektronix/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/tektronix/tests/server'...
Listing './lib/python3.5/site-packages/spacq/devices/tests'...
Listing './lib/python3.5/site-packages/spacq/devices/tests/server'...
Listing './lib/python3.5/site-packages/spacq/gui'...
Listing './lib/python3.5/site-packages/spacq/gui/action'...
Listing './lib/python3.5/site-packages/spacq/gui/config'...
Listing './lib/python3.5/site-packages/spacq/gui/config/device'...
Listing './lib/python3.5/site-packages/spacq/gui/display'...
Listing './lib/python3.5/site-packages/spacq/gui/display/plot'...
Listing './lib/python3.5/site-packages/spacq/gui/display/plot/common'...
Listing './lib/python3.5/site-packages/spacq/gui/display/plot/live'...
Listing './lib/python3.5/site-packages/spacq/gui/display/plot/static'...
Listing './lib/python3.5/site-packages/spacq/gui/display/plot/static/common'...
Listing './lib/python3.5/site-packages/spacq/gui/display/table'...
Listing './lib/python3.5/site-packages/spacq/gui/tool'...
Listing './lib/python3.5/site-packages/spacq/gui/tool/tests'...
Listing './lib/python3.5/site-packages/spacq/interface'...
Listing './lib/python3.5/site-packages/spacq/interface/pulse'...
Listing './lib/python3.5/site-packages/spacq/interface/pulse/tests'...
Compiling './lib/python3.5/site-packages/spacq/interface/pulse/tests/test_parser.py'...
***   File "./lib/python3.5/site-packages/spacq/interface/pulse/tests/test_parser.py", line 85
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spacq/interface/pulse/tool'...
Listing './lib/python3.5/site-packages/spacq/interface/pulse/tool/tests'...
Listing './lib/python3.5/site-packages/spacq/interface/tests'...
Listing './lib/python3.5/site-packages/spacq/iteration'...
Listing './lib/python3.5/site-packages/spacq/iteration/tests'...
Listing './lib/python3.5/site-packages/spacq/tests'...
Listing './lib/python3.5/site-packages/spacq/tests/tool'...
Listing './lib/python3.5/site-packages/spacq/tool'...
Listing './lib/python3.5/site-packages/spacq/tool/tests'...
Listing './share'...
Listing './share/python-wheels'...
